@@ -3,6 +3,7 @@ mlr_2.2
   short.name (abbreviation that can be used in plots and tables) and note 
   (notes regarding slight changes for the mlr integration of the learner and such).
 - fix a bug in "smote" when only factor features are present
+- change to oversampling: sample new observations only (with replacement)
 
 - new learners:
 -- classif.lqa
